# Ramtool

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/applovin/ramtool/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/applovin/ramtool/: IMemAllocAidlInterface.aidl  ISubProcessService.aidl
app/src/main/assets/: module.c
app/src/main/cpp/: CMakeLists.txt  hardwaretool.cpp  ramtool.cpp
app/src/main/cpp/cpu/: sve2_only.cpp  sve2_only.h  sve_add.cpp  sve_add.h  sve_add_arrays.s
app/src/main/cpp/cpu/inst/: aarch64.cpp  aes.cpp  asimd.cpp  crc32.cpp  inst.h  neon.cpp  pmull.cpp  sha1.cpp  sha2.cpp  sve.cpp  sve2.cpp  vfp.cpp
app/src/main/cpp/cpu/lat/: c2clat.cpp  c2clat.h
app/src/main/cpp/cpu/load/: load.cpp  load.h
app/src/main/cpp/lmbench/: bench.h  helpers.c  lat_mem_rd.c  lib_debug.c  lib_mem.c  lib_sched.c  lib_timing.c  lmbench.h
app/src/main/cpp/logger/: global.cpp  global.h
app/src/main/cpp/opt/: matrix.h  mem_opt.h
app/src/main/cpp/stream/: arm_stream.cpp  arm_stream.h  perf.cpp  perf.h
app/src/main/java/com/applovin/ramtool/: DataProcessor.java  MainActivity.java  NativeBridge.java  Sub1ProcessService.java  Sub2ProcessService.java  Sub3ProcessService.java  SubProcessService.java
app/src/main/java/com/applovin/ramtool/cpu/: Core2CoreLatMode.java  Core2CoreLatView.java  CpuActivity.java  OnCore2CoreLatencyCallback.java
app/src/main/java/com/applovin/ramtool/ram/: DataProcessor.java  RamActivity.java
app/src/main/java/com/applovin/ramtool/ui/: FramBase.java  LBaseView.java  LineChartView.java
app/src/main/java/com/park/hardware/: MainActivity.java  NativeBridge.java
app/src/main/java/com/park/hardware/cpu/: Core2CoreLatMode.java  Core2CoreLatView.java  CpuActivity.java  InstTestProvider.java  OnCore2CoreLatencyCallback.java
app/src/main/java/com/park/hardware/process/: Sub1ProcessService.java  Sub2ProcessService.java  Sub3ProcessService.java  SubProcessRunnable.java  SubProcessService.java
app/src/main/res/drawable/: button.xml  button_normal.xml  button_pressed.xml  cpu.xml
app/src/main/res/layout/: activity_cpu.xml  activity_main.xml  band_width_item.xml  latency_item.xml  latency_view.xml  storage_item.xml  system_item.xml  title_view.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/applovin/ramtool/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+8 files in other folders)
